# python-analytic

./: pyproject.toml
gm/: main.py
gm/data/: dop.xls  dop.xlsx
lab1/: main.py
lab2/: interpolation_results.json  main.py
lab3/: log.txt  main.py
lab4/: .env_example  main.py
